# MiniCrunch

./: .gitignore  README.md  decoded.txt  pyproject.toml
scripts/: setup_llamacpp.sh  transformers_ws_server.py  vllm_http_server.py  web_server.py
src/minicrunch/: arithmetic.py  backends.py  cli.py  codec.py  distributions.py  wiki.py
tests/: test_arithmetic.py  test_backends.py  test_wiki.py
