[project]
name = "minicrunch"
version = "0.1.0"
description = "LLM arithmetic coding demo using mistralai/Ministral-3-3B-Instruct-2512"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "requests>=2.32",
  "torch>=2.4",
  "transformers>=4.48",
  "zstandard>=0.23",
]

[project.optional-dependencies]
llamacpp = ["llama-cpp-python>=0.3.5"]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
minicrunch = "minicrunch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
