[project]
name = "minicrunch"
version = "0.1.0"
description = "LLM arithmetic coding demo using a remote Transformers WebSocket prior"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "requests>=2.32",
  "torch>=2.4",
  "websockets>=16.0",
  "zstandard>=0.23",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.115",
  "pyngrok>=7.2",
  "transformers>=4.50",
  "uvicorn>=0.30",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
minicrunch = "minicrunch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
